<resources>
    <string name="app_name">MyChat</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="user_name">User Name</string>
    <string name="user_email">User Email</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_profile">Profile</string>
    <string name="menu_feed">Feed</string>
    <string name="menu_calls">Calls</string>
    <string name="menu_chat">Chat</string>
    <string name="menu_status">Status</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_activity">Login Here</string>
    <string name="login_email_hint">Email/Phone:</string>
    <string name="login_pass_hint">Password</string>
    <string name="login_remember">Remember Me</string>
    <string name="login_button">Login</string>
    <string name="login_sign">"don't have an account? Sign in here"</string>
    <string name="registration_activity">Register Here</string>
    <string name="reg_fullName">Full Name</string>
    <string name="profile_name">Name</string>
    <string name="reg_age">Age</string>
    <string name="profile_sex">Gender</string>
    <string name="reg_email">Email</string>
    <string name="reg_password">Confirm Password</string>
    <string name="reg_button">Sign Up</string>
    <string name="reg_login">are you existing user? Login here</string>
    <string name="action_logout">Logout</string>
    <string name="action_share">Share</string>
    <string name="profile_title">Profile</string>
    <string name="profile_tag">Fill your details to complete your profile</string>
    <string name="profile_update">Update</string>
    <string name="profile_status">write something about yourself</string>
    <string name="profile_txt_status">Hey, I am available now..</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="gender">Gender</string>
    <string name="update">Update</string>
    <string name="name">Name</string>
    <string name="vamsee">Vamsee</string>
    <string name="this_is_chat_page">This is Chat Page...</string>
    <string name="description">Description</string>
    <string name="user">user</string>
    <string name="voice_call">Voice call</string>
    <string name="video_call">Video call</string>
    <string name="refresh">Refresh</string>
    <string name="type_here">Type here...</string>
    <string name="mic_button">mic button</string>
    <string name="hello_there">Hello there....</string>
    <string name="open">open</string>
    <string name="close">close</string>
</resources>