<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_menu_profile"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_feed"
            android:icon="@drawable/ic_menu_feed"
            android:title="@string/menu_feed" />
        <item
            android:id="@+id/nav_calls"
            android:icon="@drawable/ic_menu_calls"
            android:title="@string/menu_calls" />
        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/ic_menu_chat"
            android:title="@string/menu_chat" />
        <item
            android:id="@+id/nav_status"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_status" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_baseline_feedback_24"
            android:title="About"/>
    </group>
</menu>