<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_feed">

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.mychat.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/nav_feed"
        android:name="com.example.mychat.ui.feed.FeedFragment"
        android:label="@string/menu_feed"
        tools:layout="@layout/fragment_feed" />

    <fragment
        android:id="@+id/nav_calls"
        android:name="com.example.mychat.ui.calls.CallsFragment"
        android:label="@string/menu_calls"
        tools:layout="@layout/fragment_calls" />

    <fragment
        android:id="@+id/nav_chat"
        android:name="com.example.mychat.ui.chat.ChatFragment"
        android:label="@string/menu_chat"
        tools:layout="@layout/fragment_chat" />
    <fragment
        android:id="@+id/nav_status"
        android:name="com.example.mychat.ui.status.StatusFragment"
        android:label="@string/menu_status"
        tools:layout="@layout/fragment_status" />
    <fragment
        android:id="@+id/nav_about"
        android:name="com.example.mychat.ui.about.AboutFragment"
        android:label="About"
        tools:layout="@layout/fragment_about"/>
</navigation>