<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:override="true">

       <item android:id="@+id/search"
           android:title="Search"
           android:icon="@drawable/ic_baseline_search"
           app:showAsAction="collapseActionView|ifRoom"
           app:actionViewClass="android.widget.SearchView" />

       <item
           android:id="@+id/action_settings"
           android:orderInCategory="300"
           android:title="@string/action_settings"
           android:visible="true"
           app:showAsAction="never" />
       <item
           android:id="@+id/action_logout"
           android:orderInCategory="400"
           android:title="@string/action_logout"
           android:visible="true"
           app:showAsAction="never" />
       <item
           android:id="@+id/action_refresh"
           android:orderInCategory="100"
           android:title="@string/refresh"
           android:visible="true"
           app:showAsAction="never"/>
       <item
           android:id="@+id/action_share"
           android:orderInCategory="200"
           android:title="@string/action_share"
           android:visible="false"
           app:showAsAction="ifRoom"
           android:icon="@drawable/ic_action_share"/>
</menu>