<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:override="true">

    <item android:id="@+id/user_profile"
        android:title="@string/user"
        android:actionLayout="@layout/profile_image"
        app:showAsAction="always"
        android:icon="@drawable/ic_baseline_account_circle_32"
        android:orderInCategory="3"/>

    <item android:id="@+id/Calls_chat"
        android:title="@string/voice_call"
        android:orderInCategory="2"
        android:icon="@drawable/ic_baseline_call_chat"
        app:showAsAction="always"/>

    <item android:id="@+id/Video_chat"
        android:title="@string/video_call"
        android:orderInCategory="1"
        android:icon="@drawable/ic_baseline_videocam_24"
        app:showAsAction="always"/>

    <item android:id="@+id/search"
        android:title="Search"
        android:icon="@drawable/ic_baseline_search"
        app:showAsAction="collapseActionView|ifRoom"
        app:actionViewClass="android.widget.SearchView" />
    <item android:id="@+id/Block"
        android:title="Block"
        app:showAsAction="never"
        android:orderInCategory="2"/>
</menu>