<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context=".RegistrationActivity">


    <TextView
        android:id="@+id/tvtitle_reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:gravity="center_horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/app_name"
        android:textColor="@color/design_default_color_primary"
        android:textColorHighlight="#FFFFFF"
        android:textSize="50sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.155"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tvRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/registration_activity"
        android:textColor="@color/purple_200"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvtitle_reg"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:layout_width="@dimen/_20sdp"
        android:layout_height="@dimen/_20sdp"
        android:src="@drawable/ic_baseline_lock_32"
        app:layout_constraintTop_toTopOf="@+id/tvpassword_reg"
        app:layout_constraintBottom_toBottomOf="@+id/tvpassword_reg"
        app:layout_constraintLeft_toLeftOf="@+id/tvpassword_reg"/>


    <EditText
        android:id="@+id/tvpassword_reg"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tvPass_reg"
        android:layout_alignParentStart="true"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:fontFamily="sans-serif-black"
        android:gravity="left"
        android:hint="@string/login_pass_hint"
        android:inputType="textPassword"
        android:paddingLeft="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ev_email"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:layout_width="@dimen/_20sdp"
        android:layout_height="@dimen/_20sdp"
        android:src="@drawable/ic_baseline_lock_32"
        app:layout_constraintTop_toTopOf="@+id/tvPass_reg"
        app:layout_constraintBottom_toBottomOf="@+id/tvPass_reg"
        app:layout_constraintLeft_toLeftOf="@+id/tvPass_reg"/>

    <EditText
        android:id="@+id/tvPass_reg"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnSign"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="160dp"
        android:ems="10"
        android:fontFamily="sans-serif-black"
        android:gravity="left"
        android:hint="@string/reg_password"
        android:inputType="textPassword"
        android:paddingLeft="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvpassword_reg"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btnSign"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_above="@+id/tvLog"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_alignParentRight="true"
        android:background="@drawable/buttons_radius"
        android:text="@string/reg_button"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPass_reg"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tvLog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="20dp"
        android:paddingLeft="20dp"
        android:text="@string/reg_login"
        android:layout_marginTop="@dimen/_30sdp"
        android:textColor="#4325CA"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSign"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:layout_width="@dimen/_20sdp"
        android:layout_height="@dimen/_20sdp"
        android:src="@drawable/ic_baseline_account_circle_32_gray"
        app:layout_constraintTop_toTopOf="@+id/ev_email"
        app:layout_constraintBottom_toBottomOf="@+id/ev_email"
        app:layout_constraintLeft_toLeftOf="@+id/ev_email"/>

    <EditText
        android:id="@+id/ev_email"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:ems="10"
        android:fontFamily="sans-serif-black"
        android:gravity="left"
        android:hint="@string/reg_email"
        android:inputType="textEmailAddress"
        android:paddingLeft="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvRegister"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>